[gd_scene load_steps=6 format=3 uid="uid://qb615fcqh8x0"]

[ext_resource type="Script" uid="uid://wq3v75egxo18" path="res://spectator.gd" id="1_ktigi"]
[ext_resource type="PackedScene" uid="uid://cn6s3kxlkt6ml" path="res://main.tscn" id="2_1qy5m"]
[ext_resource type="Shader" uid="uid://cp4n0jfpkl816" path="res://shaders/eye_output.gdshader" id="2_ygl07"]
[ext_resource type="Script" uid="uid://b2qld1m6kikku" path="res://stabilized_camera.gd" id="3_6skb3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wue56"]
shader = ExtResource("2_ygl07")
shader_parameter/layer = 0.0

[node name="Spectator" type="Node2D"]
script = ExtResource("1_ktigi")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
custom_minimum_size = Vector2(512, 512)
offset_right = 512.0
offset_bottom = 512.0
stretch = true

[node name="DesktopSubViewport" type="SubViewport" parent="SubViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
render_target_update_mode = 4

[node name="HMDView" type="ColorRect" parent="SubViewportContainer/DesktopSubViewport"]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_wue56")
offset_right = 40.0
offset_bottom = 40.0

[node name="UI" type="VBoxContainer" parent="SubViewportContainer/DesktopSubViewport"]
offset_left = 10.0
offset_top = 10.0
offset_right = 194.0
offset_bottom = 76.0

[node name="SpectatorView" type="OptionButton" parent="SubViewportContainer/DesktopSubViewport/UI"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "Spectator Camera"
popup/item_0/id = 0
popup/item_1/text = "Stabilized Camera"
popup/item_1/id = 1
popup/item_2/text = "Left eye"
popup/item_2/id = 2
popup/item_3/text = "Right eye"
popup/item_3/id = 3

[node name="TrackCamera" type="CheckBox" parent="SubViewportContainer/DesktopSubViewport/UI"]
unique_name_in_owner = true
layout_mode = 2
text = "Track Camera"

[node name="ZoomSlider" type="HSlider" parent="SubViewportContainer/DesktopSubViewport/UI"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0

[node name="TrackedCamera" type="Node3D" parent="SubViewportContainer/DesktopSubViewport"]
unique_name_in_owner = true
transform = Transform3D(0.428162, 0, -0.903702, 0, 1, 0, 0.903702, 0, 0.428162, -4.12546, 1.30569, 1.60112)

[node name="SpectatorCamera" type="Camera3D" parent="SubViewportContainer/DesktopSubViewport/TrackedCamera"]
unique_name_in_owner = true
cull_mask = 1048573

[node name="StabilizedCamera" type="Camera3D" parent="SubViewportContainer/DesktopSubViewport" node_paths=PackedStringArray("xr_camera")]
unique_name_in_owner = true
script = ExtResource("3_6skb3")
xr_camera = NodePath("../../../VRSubViewport/Main/XROrigin3D/XRCamera3D")

[node name="VRSubViewport" type="SubViewport" parent="."]

[node name="Main" parent="VRSubViewport" instance=ExtResource("2_1qy5m")]
unique_name_in_owner = true

[connection signal="item_selected" from="SubViewportContainer/DesktopSubViewport/UI/SpectatorView" to="." method="_on_spectator_view_item_selected"]
[connection signal="toggled" from="SubViewportContainer/DesktopSubViewport/UI/TrackCamera" to="." method="_on_track_camera_toggled"]
[connection signal="value_changed" from="SubViewportContainer/DesktopSubViewport/UI/ZoomSlider" to="." method="_on_zoom_slider_value_changed"]
[connection signal="session_begun" from="VRSubViewport/Main" to="." method="_on_main_session_begun"]

[editable path="VRSubViewport/Main"]
